--- a/src/components/HomePage/SearchArea.module.css
+++ b/src/components/HomePage/SearchArea.module.css
@@ -1,7 +1,28 @@
 .searchArea {
-    /* background-color: red; */
+    background-color: rgb(189, 62, 55);
+    padding: 2em;
+    border-radius: 5px;
+    width: 60%;
+
+    -webkit-box-shadow: 0px 0px 70px 2px rgba(0,0,0,0.50);
+    -moz-box-shadow: 0px 0px 70px 2px rgba(0,0,0,0.50);
+    box-shadow: 0px 0px 70px 2px rgba(0,0,0,0.50);
 }
+
 .searchBar {
-    position: relative;
-    left: 100px;
+    /* background-color: white; */
+}
+
+.cssLabel, .cssFocused {
+    color: white !important;
+}
+
+.cssUnderline, .cssUnderline::before, .cssUnderline::after {
+    
+    border-bottom-color: white !important;
+   
+}
+
+.cssOutlinedInput, .notchedOutline {
+    border-color: white !important;
 }
