--- a/src/components/HomePage/SearchArea.module.css
+++ b/src/components/HomePage/SearchArea.module.css
@@ -9,9 +9,7 @@
     box-shadow: 0px 0px 70px 2px rgba(0,0,0,0.50);
 }
 
-.searchBar {
-    /* background-color: white; */
-}
+/* The !important tags below are required due to specificity. If the style is applied directly in react component (instead of css modules), this is not necessary*/
 
 .cssLabel, .cssFocused {
     color: white !important;
