--- a/src/components/HomePage/HomePage.module.css
+++ b/src/components/HomePage/HomePage.module.css
@@ -1,8 +1,33 @@
 .mainView {
+    height:100vh;
+    width: 100%;
+}
+
+.mainMask {
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    height:100vh;
+    height:50%;
+    width: 100%;
     background-color: rgb(220, 79, 71);
+
+    -webkit-clip-path: polygon(20% 90%, 50% 90%, 80% 90%, 100% 80%, 100% 0%, 0% 0%, 0 80%);
+    clip-path: polygon(20% 90%, 50% 90%, 80% 90%, 100% 80%, 100% 0%, 0% 0%, 0 80%);
+}
+
+.showMoreBtn {
+    position: absolute;
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    bottom: 10px;
+}
+
+.mainLogo {
+    text-align: center;
+}
+
+.mainLogo img {
+    width: 40%;
 }
