--- a/src/components/HomePage/SearchArea.module.css
+++ b/src/components/HomePage/SearchArea.module.css
@@ -4,23 +4,11 @@
     border-radius: 5px;
     width: 60%;
 
+    margin: 0 auto;
+    position: relative;
+    bottom: 8em;
+
     -webkit-box-shadow: 0px 0px 70px 2px rgba(0,0,0,0.50);
     -moz-box-shadow: 0px 0px 70px 2px rgba(0,0,0,0.50);
     box-shadow: 0px 0px 70px 2px rgba(0,0,0,0.50);
-}
-
-/* The !important tags below are required due to specificity. If the style is applied directly in react component (instead of css modules), this is not necessary*/
-
-.cssLabel, .cssFocused {
-    color: white !important;
-}
-
-.cssUnderline, .cssUnderline::before, .cssUnderline::after {
-    
-    border-bottom-color: white !important;
-   
-}
-
-.cssOutlinedInput, .notchedOutline {
-    border-color: white !important;
 }
