First job offer card iteration

--- a/src/components/HomePage/HomePage.module.css
+++ b/src/components/HomePage/HomePage.module.css
@@ -31,3 +31,13 @@
 .mainLogo img {
     width: 40%;
 }
+
+.searchResults {
+    min-height: 100vh;
+    width: 50%;
+    margin: 0 auto;
+}
+
+.searchResults ol {
+    list-style-type: none;
+}
