--- a/src/components/HomePage/SearchArea.module.css
+++ b/src/components/HomePage/SearchArea.module.css
@@ -1,5 +1,5 @@
 .searchArea {
-    background-color: rgb(189, 62, 55);
+    background-color: white;
     padding: 2em;
     border-radius: 5px;
     width: 60%;
@@ -11,4 +11,9 @@
     -webkit-box-shadow: 0px 0px 70px 2px rgba(0,0,0,0.50);
     -moz-box-shadow: 0px 0px 70px 2px rgba(0,0,0,0.50);
     box-shadow: 0px 0px 70px 2px rgba(0,0,0,0.50);
+}
+
+.searchArea > form {
+    display: flex;
+    flex-wrap: wrap;
 }
