Started rework on search area

--- a/src/components/HomePage/HomePage.module.css
+++ b/src/components/HomePage/HomePage.module.css
@@ -26,10 +26,16 @@
 
 .mainLogo {
     text-align: center;
+    padding-bottom: 8em;
 }
 
 .mainLogo img {
     width: 40%;
+}
+
+.infoBox {
+    position: relative;
+    top: 11em;
 }
 
 .searchResults {
