--- a/src/components/HomePage/HomePage.module.css
+++ b/src/components/HomePage/HomePage.module.css
@@ -39,8 +39,10 @@
 }
 
 .searchResults {
+    padding: 1em;
+    box-sizing: border-box;
     min-height: 100vh;
-    width: 80%;
+    width: 100%;
     margin: 0 auto;
 }
 
